[package]
name = "all-the-crate-names"
description = "Binary for generating all crate names with the crates.io index"
version = "0.1.0"
homepage = "https://lib.rs/all-the-crate-names"
author = "liuyinz <liuyinz95@gmail.com>"
categories = ["development-tools"]
repository = "https://github.com/liuyinz/all-the-crate-names"
license = "Apache-2.0"
edition = "2021"

[dependencies]
crates-index = "0.18.9"
rayon = "1.5.3"
